--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -7295,6 +7295,115 @@ pre- or post-publication stages.\strut
 \bottomrule
 \end{longtable}
 
+\hypertarget{curriculum-vitae}{%
+\chapter*{Curriculum vitae}\label{curriculum-vitae}}
+\addcontentsline{toc}{chapter}{Curriculum vitae}
+
+\textbf{Jonas Ibn-Salem}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+\textbf{Personal data }
+
+\begin{description}
+\item[Date of birth]
+24.07.1987
+\item[Place of birth]
+Mamers (France)
+\item[Nationality]
+German
+\end{description}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+\textbf{Education}
+
+\begin{description}
+\item[2014-2018]
+PhD in Computational Biology, \emph{Johannes Gutenberg University Mainz
+and Institute of Molecular Biology (IMB)}, Mainz, Germany
+\item[2011--2014]
+MSc Bioinformatics, \emph{Freie Universität Berlin}, Germany
+\item[2008--2011]
+BSc Bioinformatics, \emph{Freie Universität Berlin}, Germany
+\item[1994--2007]
+Abitur (A level), \emph{Rudolf-Steiner-Schule Loheland}, Fulda, Germany
+\end{description}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+\textbf{Publications}
+
+\begin{itemize}
+\item
+  Zepeda-Mendoza CJ*, \textbf{Ibn-Salem J*}, Kammin T, Harris DJ, Rita
+  D, Gripp KW, MacKenzie JJ, Gropman A, Graham B, Shaheen R, Alkuraya
+  FS, Brasington CK, Spence EJ, Masser-Frye D, Bird LM, Spiegel E,
+  Sparkes RL, Ordulu Z, Talkowski ME, Andrade-Navarro MA, Robinson PN,
+  Morton CC.\\
+  \textbf{Computational Prediction of Position Effects of Apparently
+  Balanced Human Chromosomal Rearrangements.}\\
+  \emph{Am J Hum Genet.} 2017 Aug 3;101(2):206-217.
+  \href{https://doi.org/10.1016/j.ajhg.2017.06.011}{doi:
+  10.1016/j.ajhg.2017.06.011}.
+\item
+  \textbf{Ibn-Salem J}, Muro EM, Andrade-Navarro MA.\\
+  \textbf{Co-regulation of paralog genes in the three-dimensional
+  chromatin architecture.}\\
+  \emph{Nucleic Acids Research} 2017 Jan 9;45(1):81-91.
+  \href{https://doi.org/10.1093/nar/gkw813}{doi: 10.1093/nar/gkw813}.\\
+\item
+  \textbf{Ibn-Salem, J}., Meiers, S., Eigenbrod, O., Sehlke, R., Talyan,
+  S., Schwahn, K., Otto, R., Pataskar, A., Metge, F., \& Angerer, P.\\
+  \textbf{Highlights of the 1st Student Symposium on Computational
+  Genomics.}\\
+  \emph{Genomics And Computational Biology}. 2017 2(1), e59.
+  \href{https://doi.org/10.18547/gcb.2016.vol2.iss1.e59}{doi:10.18547/gcb.2016.vol2.iss1.e59}
+\item
+  Hansen P, Hecht J, \textbf{Ibn-Salem J}, Menkuec BS, Roskosch S, Truss
+  M, Robinson PN.\\
+  \textbf{Q-nexus: a comprehensive and efficient analysis pipeline
+  designed for ChIP-nexus.}\\
+  \emph{BMC Genomics}. 2016 Nov 4;17(1):873.
+  \url{https://doi.org/10.1186/s12864-016-3164-6} ~\\
+\item
+  Piacentino ML, Zuch DT, Fishman J, Rose S, Speranza EE, Li C, Yu J,
+  Chung O, Ramachandran J, Ferrell P, Patel V, Reyna A, Hameeduddin H,
+  Chaves J, Hewitt FB, Bardot E, Lee D, Core AB, Hogan JD, Keenan JL,
+  Luo L, Coulombe-Huntington J, Blute TA, Oleinik E, \textbf{Ibn-Salem
+  J}, Poustka AJ, Bradham CA.\\
+  \textbf{RNA-Seq identifies SPGs as a ventral skeletal patterning cue
+  in sea urchins.}\\
+  \emph{Development}. 2016 Jan 11.
+  \href{https://doi.org/10.1242/dev.129312}{doi: 10.1242/dev.129312} ~\\
+\item
+  Starick SR*, \textbf{Ibn-Salem J*}, Jurk M, Hernandez C, Love MI,
+  Chung HR, Vingron M, Thomas-Chollier M, Meijsing SH.\\
+  \textbf{ChIP-exo signal associated with DNA-binding motifs provides
+  insight into the genomic binding of the glucocorticoid receptor and
+  cooperating transcription factors}.\\
+  \emph{Genome Research}. 2015 Jun;25(6):825-35.
+  \href{https://doi.org/10.1101/gr.185157.114}{doi:10.1101/gr.185157.114}
+\item
+  Köhler S, Schoeneberg U, Czeschik JC, Doelken SC, Hehir-Kwa JY,
+  \textbf{Ibn-Salem J}, Mungall CJ, Smedley D, Haendel MA, Robinson
+  PN.\\
+  \textbf{Clinical interpretation of CNVs with cross-species phenotype
+  data}.\\
+  \emph{J Med Genet}. 2014 Nov;51(11):766-772.
+  \href{https://doi.org/10.1136/jmedgenet-2014-102633}{doi:
+  10.1136/jmedgenet-2014-102633}.
+\item
+  \textbf{Ibn-Salem J*}, Köhler S*, Love MI, Chung HR, Huang N, Hurles
+  ME, Haendel M, Washington NL, Smedley D, Mungall CJ, Lewis SE, Ott CE,
+  Bauer S, Schofield PN, Mundlos S, Spielmann M, Robinson PN.\\
+  \textbf{Deletions of chromosomal regulatory boundaries are associated
+  with congenital disease.}\\
+  \emph{Genome Biology}. 2014 Sep 4;15(9):423.
+  \href{https://doi.org/10.1186/s13059-014-0423-1}{doi:
+  10.1186/s13059-014-0423-1}.
+\end{itemize}
+
 \hypertarget{acknowledgements-2}{%
 \chapter*{Acknowledgements}\label{acknowledgements-2}}
 \addcontentsline{toc}{chapter}{Acknowledgements}
