--- a/layout_content/titlepages.tex
+++ b/layout_content/titlepages.tex
@@ -3,16 +3,51 @@
 % ------------------------------------  --> cover title page
 \begin{titlepage}
 	\pdfbookmark[0]{Cover}{Cover}
-	\flushright
+	% \flushright
+	\centering
 	\hfill
 	\vfill
-	{\LARGE\thesisTitle \par}
-	\rule[5pt]{\textwidth}{.4pt} \par
-	{\Large\thesisName}
+	{\LARGE\textbf{\thesisTitle} \par}
+  ~\\
+  ~\\
+  ~\\
+  ~\\
+  ~\\
+  Dissertation \\
+  Zur Erlangung des Grades \\
+  Doktor der Naturwissenschaften\\
+  ~\\
+  Am Fachbereich Biologie \\
+  Der Johannes Gutenberg-Universität Mainz\\
+	% \rule[5pt]{\textwidth}{.4pt} \par
+	~\\
+	~\\
+	~\\
+	{\Large\textbf{\thesisName}} \\
+	geb. am 24.07.1987 in Mamers, Frankreich
+	~\\
+	~\\
 	\vfill
-	\textit{\large\thesisDate} \\
-	Version: \thesisVersion
+	\textit{\large Mainz, 2018} \\
+	% Version: \thesisVersion
 \end{titlepage}
+
+
+% ------------------------------------  --> second page
+\newpage
+\thispagestyle{empty}
+\mbox{}
+\newpage
+
+\hfill
+\vfill
+{
+	\small
+	Dekan: Prof. Dr. Walter Stöcker \\
+	1. Berichterstatter: \thesisFirstReviewer \\
+	2. Berichterstatterin: \thesisSecondReviewer \\
+	Tag der mündlichen Prüfung: \\
+}
 
 
 % ------------------------------------  --> main title page
