--- a/preamble.tex
+++ b/preamble.tex
@@ -20,10 +20,10 @@
 % **************************************************
 \newcommand{\thesisTitle}{Genome folding in evolution and disease}
 \newcommand{\thesisName}{Jonas Ibn-Salem}
-\newcommand{\thesisSubject}{PhD Thesis}
+\newcommand{\thesisSubject}{Dissertation}
 % \newcommand{\thesisDate}{January, 2018}
 \newcommand{\thesisDate}{\today}
-\newcommand{\thesisVersion}{0.0.1}
+\newcommand{\thesisVersion}{0.1.0}
 
 \newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
 \newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
