--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -660,9 +660,9 @@ report slightly increased co-expression of genes within the same TAD
 Altogether, there is accumulating evidence that TADs are fundamental
 units of chromosome organization \citep{Dixon2016}
 
-\hypertarget{hierarchy-of-domain-like-structures-across-genomic-length-scales}{%
-\subsection{Hierarchy of domain-like structures across genomic-length
-scales}\label{hierarchy-of-domain-like-structures-across-genomic-length-scales}}
+\hypertarget{hierarchy-of-domain-structures-across-genomic-length-scales}{%
+\subsection{Hierarchy of domain structures across genomic length
+scales}\label{hierarchy-of-domain-structures-across-genomic-length-scales}}
 
 Globally, higher-order interactions between different TADs leads to a
 tree-like hierarchy of TADs and meta-TADs across genomic scales up to
@@ -818,9 +818,9 @@ variation across individual cells (discussed in section
 \ref{single-cell}), initial studies focused on the differences of genome
 folding across cell cycle and cell differentiation.
 
-\hypertarget{dynamics-across-cell-cycle}{%
-\subsection{Dynamics across cell
-cycle}\label{dynamics-across-cell-cycle}}
+\hypertarget{dynamics-across-the-cell-cycle}{%
+\subsection{Dynamics across the cell
+cycle}\label{dynamics-across-the-cell-cycle}}
 
 It is important to keep in mind how chromosome folding changes during
 cell division. Spatial organization is generally studied in
