fix refernece Lander2001

--- a/bib/PhDfltClean.bib
+++ b/bib/PhDfltClean.bib
@@ -1935,7 +1935,7 @@
 }
 
 @article{Lander2001,
- author = {Lander, E S and Linton, L M and Birren, B and Nusbaum, C and Zody, M C and Baldwin, J and Devon, K and Dewar, K and Doyle, M and FitzHugh, W and Funke, R and Gage, D and Harris, K and Heaford, A and Howland, J and Kann, L and Lehoczky, J and LeVine, R and [...]},
+ author = {Lander, E S and Linton, L M and Birren, B and Nusbaum, C and Zody, M C and Baldwin, J and Devon, K and Dewar, K and Doyle, M and FitzHugh, W and Funke, R and Gage, D and Harris, K and Heaford, A and Howland, J and Kann, L and Lehoczky, J and LeVine, R and McEwan, P and others},
  doi = {10.1038/35057062},
  journal = {Nature},
  number = {6822},
