--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -826,7 +826,7 @@ Nationality
 
 **Education**
 
-2014-2018
+2014--2018
 
 :   PhD in Computational Biology, *Johannes Gutenberg University Mainz and Institute of Molecular Biology (IMB)*, Mainz, Germany
 
@@ -911,84 +911,163 @@ Nationality
     *Genome Biology*. 2014 Sep 4;15(9):423. [doi:
     10.1186/s13059-014-0423-1](https://doi.org/10.1186/s13059-014-0423-1).
 
-<!-- --- -->
+\* equal contributions
 
-<!-- **Invited Talks** -->
+**Preprints**
 
-<!-- -   **Imperial College London, MRC London Institute of Medical -->
-<!--     Sciences**, 19 May. 2017, London, UK Title: *Evolution of TADs and -->
-<!--     prediction of chromatin looping* -->
+-   Krefting J, Andrade-Navarro MA, **Ibn-Salem J^#^**. \
+    **Evolutionary stability of topologically associating domains is associated with conserved gene regulation.** \
+    *bioRxiv*. 2017. [doi:10.1101/231431](https://doi.org/10.1101/231431).
 
-<!-- -   **Humboldt University Berlin, Humboldt University Berlin**, 19 Dez. -->
-<!--     2016, Berlin, Germany Title: *ChIP-seq and related techniques to -->
-<!--     analyze protein-DNA interactions and predict chromatin looping -->
-<!--     interactions.* -->
+-   **Ibn-Salem J^#^**, Andrade-Navarro MA^#^. \
+    **Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs.**\
+    *bioRxiv*. February 2018:257584. [doi:10.1101/257584](https://doi.org/257584).
 
-<!-- -   **Max-Planck-Institute for Molecular Genetics**, 04 Dez. 2015, -->
-<!--     Berlin, Germany Title: *Co-regulation of paralog genes in the 3D -->
-<!--     chromatin architecture* -->
+^#^ corresponding author
 
-<!-- --- -->
-<!-- **Conference Presentations** -->
+---
 
-<!-- -   **Basel Computational Biology Conference \[BC2\]$^{2}$**, 12-15 Sept -->
-<!--     2017, Basel, Switzerland Title: *Prediction of chromatin looping -->
-<!--     interactions from ChIP-seq profiles at CTCF motifs* -->
+**Invited Talks**
 
-<!-- -   **ISCB European Student Council Symposium 2016**, 3 Sept 2016, The -->
-<!--     Hauge, Netherlands Title: *Prediction of Chromatin Looping Events* -->
+-   **Imperial College London, MRC London Institute of Medical Sciences**, 19 May. 2017, London, UK \
+    Title: *Evolution of TADs and prediction of chromatin looping*
 
-<!-- -   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin, -->
-<!--     Ireland Title: *Co-regulation of human paralog genes in the -->
-<!--     three-dimensional chromatin architecture* -->
+-   **Humboldt University Berlin, Humboldt University Berlin**, 19 Dez. 2016, Berlin, Germany \
+    Title: *ChIP-seq and related techniques to analyze protein-DNA interactions and predict chromatin looping interactions.*
 
-<!-- --- -->
-<!-- **Poster Presentations** -->
+-   **Max-Planck-Institute for Molecular Genetics**, 04 Dez. 2015, Berlin, Germany \
+    Title: *Co-regulation of paralog genes in the 3D chromatin architecture*
 
-<!-- -   **2017 IMB Conference: Gene Regulation by The Numbers**, 19 - 21 -->
-<!--     June, 2017, Mainz, Germany Title: *Prediction of chromatin looping -->
-<!--     interactions from ChIP-seq profiles at CTCF motifs* -->
+---
 
-<!-- -   **15th European Conference on Computational Biology**, 4-7 Sept -->
-<!--     2016, The Hauge, Netherlands Title: *Co-regulation of paralog genes -->
-<!--     in the three-dimensional chromatin architecture* -->
+**Conference Presentations**
 
-<!-- -   **German Conference on Bioinformatics 2016**, 12-15 Sept 2016, -->
-<!--     Berlin, Germany Title: *Prediction of three-dimensional chromatin -->
-<!--     looping from sequence motifs and protein binding signals* -->
+-   **Basel Computational Biology Conference BC$^{2}$**, 12-15 Sept
+    2017, Basel, Switzerland \
+    Title: *Prediction of chromatin looping
+    interactions from ChIP-seq profiles at CTCF motifs*
 
-<!-- -   **EMBO Conference: From Functional Genomics to Systems Biology**, -->
-<!--     12-15 Nov 2016, Heidelberg, Germany Title: *Three-dimensional -->
-<!--     chromatin looping predicted by CTCF motifs and ChIP-seq signals* -->
+-   **ISCB European Student Council Symposium 2016**, 3 Sept 2016, The
+    Hauge, Netherlands \
+    Title: *Prediction of Chromatin Looping Events*
 
-<!-- -   **RECOMB Comparative Genomics 2015**, 04-07 Oct. 2015, Frankfurt, -->
-<!--     Germany Title: *Co-regulation of paralog genes in the -->
-<!--     three-dimensional chromatin architecture* -->
+-   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin,
+    Ireland \
+    Title: *Co-regulation of human paralog genes in the
+    three-dimensional chromatin architecture*
 
-<!-- -   **ISMB/ECCB Conference 2015**, 12-14 July, Dublin, Ireland Title: -->
-<!--     *Co-regulation of human paralog genes in the thre-dimensional -->
-<!--     chromatin architecture* -->
+---
 
-<!-- -   **Regulatory Genomics Special Interest Group**, 11 July 2015, -->
-<!--     Dublin, Ireland Title: *Co-regulation of human paralog genes in the -->
-<!--     three-dimensional chromatin architecture* -->
+**Poster Presentations**
 
-<!-- -   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin, -->
-<!--     Ireland Title: *Co-regulation of human paralog genes in the -->
-<!--     three-dimensional chromatin architecture* -->
+-   **2017 IMB Conference: Gene Regulation by The Numbers**, 19 - 21
+    June 2017, Mainz, Germany \
+    Title: *Prediction of chromatin looping
+    interactions from ChIP-seq profiles at CTCF motifs*
 
-<!-- -   **Genome Regulation in 3D Conference**, June 28-30, 2015, Rehovot, -->
-<!--     Israel Title: *Co-regulation of human paralog genes in the -->
-<!--     three-dimensional chromatin architecture* -->
+-   **15th European Conference on Computational Biology**, 4-7 Sept
+    2016, The Hauge, Netherlands \
+    Title: *Co-regulation of paralog genes
+    in the three-dimensional chromatin architecture*
 
-<!-- -   **German Conference on Bioinformatics 2014**, Sept. 29 - Oct. 1, -->
-<!--     2014, Bielefeld, Germany Title: *Deletions of chromosomal regulatory -->
-<!--     boundaries are associated with congenital disease* -->
+-   **German Conference on Bioinformatics 2016**, 12-15 Sept 2016,
+    Berlin, Germany \
+    Title: *Prediction of three-dimensional chromatin
+    looping from sequence motifs and protein binding signals*
 
-<!-- -   **Annual Meeting of the AGD 2014**, Oct 10-11, Potsdam, Germany -->
-<!--     Title: *Deletions of chromosomal regulatory boundaries are -->
-<!--     associated with congenital disease* -->
+-   **EMBO Conference: From Functional Genomics to Systems Biology**,
+    12-15 Nov 2016, Heidelberg, Germany \
+    Title: *Three-dimensional
+    chromatin looping predicted by CTCF motifs and ChIP-seq signals*
 
+-   **RECOMB Comparative Genomics 2015**, 04-07 Oct. 2015, Frankfurt,
+    Germany \
+    Title: *Co-regulation of paralog genes in the
+    three-dimensional chromatin architecture*
+
+-   **ISMB/ECCB Conference 2015**, 12-14 July, Dublin, Ireland \
+Title:
+    *Co-regulation of human paralog genes in the three-dimensional
+    chromatin architecture*
+
+-   **Regulatory Genomics Special Interest Group**, 11 July 2015,
+    Dublin, Ireland \
+    Title: *Co-regulation of human paralog genes in the
+    three-dimensional chromatin architecture*
+
+-   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin,
+    Ireland \
+    Title: *Co-regulation of human paralog genes in the
+    three-dimensional chromatin architecture*
+
+-   **Genome Regulation in 3D Conference**, June 28-30, 2015, Rehovot,
+    Israel \
+    Title: *Co-regulation of human paralog genes in the
+    three-dimensional chromatin architecture*
+
+-   **German Conference on Bioinformatics 2014**, Sept. 29 - Oct. 1,
+    2014, Bielefeld, Germany \
+    Title: *Deletions of chromosomal regulatory
+    boundaries are associated with congenital disease*
+
+-   **Annual Meeting of the AGD 2014**, Oct 10-11, Potsdam, Germany \
+    Title: *Deletions of chromosomal regulatory boundaries are
+    associated with congenital disease*
+
+---
+
+**Grants and Awards**
+
+-    **Travel Grant from gsk Stiftung** (350 EUR) for "`Genomic Regulation 2018"' workshop, 15-18 March 2018, Nendaz, Switzerland.
+-    **Digital Future Scholarship** free admission (900 EUR) to "`The Digital Future"' conference on May 13th, 2017 in Berlin
+-    **Scientific Event Grant 3,500 Euro** from Boehringer Ingelheim Stiftung for Student Symposium on Computational Genomics, Nov 30, 2016, Mainz
+-    **Scientific Meeting Grant 1,500 GBP (~1,750 EUR)** from The Company of Biologists (EA1228) for Student Symposium on Computational Genomics, Nov 30, 2016, Mainz
+-    **Travel Fellowship Award for 4th ISCB European Student Council Symposium 2016**, Sept 2016, The Hauge, Netherlands
+-    **Digital Future Scholarship** free admission (900 EUR) to "`The Digital Future"' conference on May 11th, 2016 in Berlin
+-    **F1000Research Poster Awards from ISMB/ECCB**
+-    **Runner-up Poster Presentation Award form ISCB Student Council Symposium 2015**
+-    **Travel Award to the Genome regulation in 3D meeting**, June 28-30, Weizmann Institute of Science, Rehovot, Israel
+-    **Third poster price of Annual Meeting of the AGD 2014**
+
+---
+
+**Organizational Experience**
+
+ - **Student Symposium on Computational Genomics, Nov 30, 2016**, IMB, Mainz, Germany (main organizer and symposium chair)
+
+---
+
+**Research Experience**
+
+Sep 2014 -- Feb 2018
+
+:   **Research assistant and doctoral student**, *Johannes Gutenberg University Mainz* and *Institute of Molecular Biology (IMB)*, Mainz, Germany
+
+May 2017 (for two weeks)
+
+:   **Lab visit**, *Imperial College London*, London, UK. Invited by Boris Lehnert and Matthias Merkenschlager. \
+Computational analysis of gene expression and 3D genome organization upon knock-down of cohesin in mouse macrophages and thymocytes
+
+Jun 2014 -- August 2014
+
+:   **Research assistant**, *Computational Biology Group at Institute for Medical Genetics and Human Genetics*, Charité – Universitätsmedizin, Berlin, Germany. \
+Computational analysis of structural variations and phenotype associations.
+
+Sep 2013 -- Jun 2014
+
+:   **Student assistant (Master thesis project)**, *Department Vingron at Max Planck Institute for Molecular Genetics*, Berlin, Germany and *Institut de Biologie de l' Ecole Normale Superieure*, Paris, France \
+Transcription factor binding profiles in ChIP-exo data
+
+Apr 2013 -- Dec 2013
+
+:   **Student assistant**, *Computational Biology Group at Institute for Medical Genetics and Human Genetics*, Charité – Universitätsmedizin, Berlin \
+Modeling the effect of genomic deletions of regulatory barriers in the chromatin structure on gene regulation and phenotypes. 
+
+Jan 2011 -- Aug 2013
+
+:   **Student assistant**, *Max Planck Institute for Molecular Genetics*, Department Lehrarch, Group: Evolution and Development, Berlin 
+<!-- \ -->
+<!-- Analysis of high-throughput sequencing data (whole genome sequencing, whole exome sequencing, variant calling andd annotation, RNA-seq, differntial expression) -->
 
 # Acknowledgements {-}
 
