--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -796,7 +796,7 @@ Table: (\#tab:contribution) **Contributions to individual publications**. Contri
 
 # Zusammenfassung {-}
 
-Das menschliche Genome ist hierarchisch gefaltet im drei-eindimensionalen Zellkern. Paarweise Chromatin Interaktionen kommen gebündelt in diskreten chromosomalen Regionen vor, die topologically associating domains (TADs) genannt werden. Ob TADs eine essenzielle Rolle spielen für die Regulation von Genexpression in der Evolution und in Krankheiten, wird in dieser Dissertation untersucht. Dazu werden genomweite Interaktions-Karten mit verschiedensten Daten entlang des linearen Genoms computergestützt integriert. 
+Das menschliche Genome ist hierarchisch gefaltet im dreidimensionalen Zellkern. Paarweise Chromatin Interaktionen kommen gebündelt in diskreten chromosomalen Regionen vor, die topologically associating domains (TADs) genannt werden. Ob TADs eine essenzielle Rolle spielen für die Regulation von Genexpression in der Evolution und in Krankheiten, wird in dieser Dissertation untersucht. Dazu werden genomweite Interaktions-Karten mit verschiedensten Daten entlang des linearen Genoms computergestützt integriert. 
 
 Dabei gruppieren sich funktional ähnliche Gene in TADs und teilen regulatorische Elemente im Genom, um eine koordinierte Expression zu ermöglichen. TADs werden mehrheitlich stabil durch die Evolution vererbt und sind mit konservierter Genexpression assoziiert. Zerstörungen von TADs durch Chromosomenmutationen während der Evolution oder in genetischen Erkrankungen sind mit Änderungen von Genexpression assoziiert. Daten über Chromatin Interaktionen und TADs können genutzt werden, um genregulatorische Effekte von strukturellen Chromosomenaberration zu interpretieren, wie hier anhand von Patienten mit diversen klinischen Phänotypen gezeigt wird. Ausserdem wurde eine Software entwickelt, um anhand von genetischen Sequenzeigenschaften und gewebespezifischen Signalen von Protein-Bindestellen, genomweite Chromatin Interaktionen mit hoher Genauigkeit vorherzusagen.
 
@@ -921,7 +921,7 @@ Nationality
 
 -   **Ibn-Salem J^#^**, Andrade-Navarro MA^#^. \
     **Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs.**\
-    *bioRxiv*. February 2018:257584. [doi:10.1101/257584](https://doi.org/257584).
+    *bioRxiv*. February 2018:257584. [doi:10.1101/257584](https://doi.org/10.1101/257584).
 
 ^#^ corresponding author
 
