rm "draft" from description

--- a/index.Rmd
+++ b/index.Rmd
@@ -25,7 +25,7 @@ csl: genome-research.csl
 link-citations: yes
 github-repo: "ibn-salem/thesis"
 url: 'https\://ibn-salem.github.io/thesis/'
-description: "A draft PhD thesis on genome folding in evoultion and disease."
+description: "A PhD thesis on genome folding in evoultion and disease."
 ---
 
 # Abstract {-}
