some required changes for electronic publication

--- a/layout_content/titlepages.tex
+++ b/layout_content/titlepages.tex
@@ -1,54 +1,54 @@
 % !TEX root = ../my-thesis.tex
 %
-% ------------------------------------  --> cover title page
-\begin{titlepage}
-	\pdfbookmark[0]{Cover}{Cover}
-	% \flushright
-	\centering
-	\hfill
-	\vfill
-	{\LARGE\textbf{\thesisTitle} \par}
-  ~\\
-  ~\\
-  ~\\
-  ~\\
-  ~\\
-  Dissertation \\
-  Zur Erlangung des Grades \\
-  Doktor der Naturwissenschaften\\
-  ~\\
-  Am Fachbereich Biologie \\
-  Der Johannes Gutenberg-Universität Mainz\\
-	% \rule[5pt]{\textwidth}{.4pt} \par
-	~\\
-	~\\
-	~\\
-	{\Large\textbf{\thesisName}} \\
-	geb. am 24.07.1987 in Mamers, Frankreich
-	~\\
-	~\\
-	\vfill
-	\textit{\large Mainz, 2018} \\
-	% Version: \thesisVersion
-\end{titlepage}
-
-
-% ------------------------------------  --> second page
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
-
-\hfill
-\vfill
-{
-	\small
-	Dekan: Prof. Dr. Walter Stöcker \\
-	1. Berichterstatter: \thesisFirstReviewer \\
-	2. Berichterstatterin: \thesisSecondReviewer \\
-	Tag der mündlichen Prüfung: \\
-}
-
+% % ------------------------------------  --> cover title page
+% \begin{titlepage}
+% 	\pdfbookmark[0]{Cover}{Cover}
+% 	% \flushright
+% 	\centering
+% 	\hfill
+% 	\vfill
+% 	{\LARGE\textbf{\thesisTitle} \par}
+%   ~\\
+%   ~\\
+%   ~\\
+%   ~\\
+%   ~\\
+%   Dissertation \\
+%   Zur Erlangung des Grades \\
+%   Doktor der Naturwissenschaften\\
+%   ~\\
+%   Am Fachbereich Biologie \\
+%   Der Johannes Gutenberg-Universität Mainz\\
+% 	% \rule[5pt]{\textwidth}{.4pt} \par
+% 	~\\
+% 	~\\
+% 	~\\
+% 	{\Large\textbf{\thesisName}} \\
+% 	geb. am 24.07.1987 in Mamers, Frankreich
+% 	~\\
+% 	~\\
+% 	\vfill
+% 	\textit{\large Mainz, 2018} \\
+% 	% Version: \thesisVersion
+% \end{titlepage}
+%
+%
+% % ------------------------------------  --> second page
+% \newpage
+% \thispagestyle{empty}
+% \mbox{}
+% \newpage
+%
+% \hfill
+% \vfill
+% {
+% 	\small
+% 	Dekan: Prof. Dr. Walter Stöcker \\
+% 	1. Berichterstatter: \thesisFirstReviewer \\
+% 	2. Berichterstatterin: \thesisSecondReviewer \\
+% 	Tag der mündlichen Prüfung: 10. August 2018 \\
+% }
+%
 
 % ------------------------------------  --> main title page
 \begin{titlepage}
@@ -67,36 +67,36 @@
 	{\LARGE \color{ctcolortitle}\textbf{\thesisTitle} \\[10mm]}
 	{\Large \thesisName} \\
 
-	\vfill
-	\begin{minipage}[t]{.27\textwidth}
-		\raggedleft
-		\textit{1. Reviewer}
-	\end{minipage}
-	\hspace*{15pt}
-	\begin{minipage}[t]{.65\textwidth}
-		{\Large \thesisFirstReviewer} \\
-	  	{\small \thesisFirstReviewerDepartment} \\[-1mm]
-		{\small \thesisFirstReviewerUniversity}
-	\end{minipage} \\[5mm]
-	\begin{minipage}[t]{.27\textwidth}
-		\raggedleft
-		\textit{2. Reviewer}
-	\end{minipage}
-	\hspace*{15pt}
-	\begin{minipage}[t]{.65\textwidth}
-		{\Large \thesisSecondReviewer} \\
-	  	{\small \thesisSecondReviewerDepartment} \\[-1mm]
-		{\small \thesisSecondReviewerUniversity}
-	\end{minipage} \\[10mm]
-	\begin{minipage}[t]{.27\textwidth}
-		\raggedleft
-		% \textit{Supervisors}
-		\textit{Supervisor}
-	\end{minipage}
-	\hspace*{15pt}
-	\begin{minipage}[t]{.65\textwidth}
-		\thesisFirstSupervisor\ %and \thesisSecondSupervisor
-	\end{minipage} \\[10mm]
+	% \vfill
+	% \begin{minipage}[t]{.27\textwidth}
+	% 	\raggedleft
+	% 	\textit{1. Reviewer}
+	% \end{minipage}
+	% \hspace*{15pt}
+	% \begin{minipage}[t]{.65\textwidth}
+	% 	{\Large \thesisFirstReviewer} \\
+	%   	{\small \thesisFirstReviewerDepartment} \\[-1mm]
+	% 	{\small \thesisFirstReviewerUniversity}
+	% \end{minipage} \\[5mm]
+	% \begin{minipage}[t]{.27\textwidth}
+	% 	\raggedleft
+	% 	\textit{2. Reviewer}
+	% \end{minipage}
+	% \hspace*{15pt}
+	% \begin{minipage}[t]{.65\textwidth}
+	% 	{\Large \thesisSecondReviewer} \\
+	%   	{\small \thesisSecondReviewerDepartment} \\[-1mm]
+	% 	{\small \thesisSecondReviewerUniversity}
+	% \end{minipage} \\[10mm]
+	% \begin{minipage}[t]{.27\textwidth}
+	% 	\raggedleft
+	% 	% \textit{Supervisors}
+	% 	\textit{Supervisor}
+	% \end{minipage}
+	% \hspace*{15pt}
+	% \begin{minipage}[t]{.65\textwidth}
+	% 	\thesisFirstSupervisor\ %and \thesisSecondSupervisor
+	% \end{minipage} \\[10mm]
 
 	\thesisDate \\
 
@@ -111,9 +111,9 @@
 	\textbf{\thesisName} \\
 	\textit{\thesisTitle} \\
 	\thesisSubject, \thesisDate \\
-	Reviewers: \thesisFirstReviewer\ and \thesisSecondReviewer \\
-	% Supervisors: \thesisFirstSupervisor\ and \thesisSecondSupervisor \\[1.5em]
-	Supervisor: \thesisFirstSupervisor \\[1.5em]
+	% Reviewers: \thesisFirstReviewer\ and \thesisSecondReviewer \\
+	% % Supervisors: \thesisFirstSupervisor\ and \thesisSecondSupervisor \\[1.5em]
+	% Supervisor: \thesisFirstSupervisor \\[1.5em]
 	\textbf{\thesisUniversity} \\
 	\textit{\thesisUniversityGroup} \\
 	\thesisUniversityInstitute \\
