--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -802,301 +802,301 @@ Dabei gruppieren sich funktional ähnliche Gene in TADs und teilen regulatorisch
 
 Dieses Arbeit zeigt, dass TADs nicht nur strukturelle Einheiten von Chromosomen sind, sondern entscheidende funktionale Bausteine von Genomen sind, welche das regulatorische Umfeld von Genen definieren. Daher wird es zunehmend wichtig, die Faltung des Genoms zu berücksichtigen, sowohl in der genomischen Forschung, als auch in der klinischen Praxis.
 
-# Curriculum vitae {-}
+<!-- # Curriculum vitae {-} -->
 
-**Jonas Ibn-Salem**
+<!-- **Jonas Ibn-Salem** -->
 
----
+<!-- --- -->
 
-**Personal data **
+<!-- **Personal data ** -->
 
-Date of birth
+<!-- Date of birth -->
 
-:   24.07.1987
+<!-- :   24.07.1987 -->
 
-Place of birth
+<!-- Place of birth -->
 
-:   Mamers (France)
+<!-- :   Mamers (France) -->
 
-Nationality
+<!-- Nationality -->
 
-:   German
+<!-- :   German -->
 
----
+<!-- --- -->
 
-**Education**
+<!-- **Education** -->
 
-2014--2018
+<!-- 2014--2018 -->
 
-:   PhD in Computational Biology, *Johannes Gutenberg University Mainz and Institute of Molecular Biology (IMB)*, Mainz, Germany
+<!-- :   PhD in Computational Biology, *Johannes Gutenberg University Mainz and Institute of Molecular Biology (IMB)*, Mainz, Germany -->
 
 
-2011--2014
+<!-- 2011--2014 -->
 
-:   MSc Bioinformatics, *Freie Universität Berlin*, Germany
+<!-- :   MSc Bioinformatics, *Freie Universität Berlin*, Germany -->
 
-2008--2011
+<!-- 2008--2011 -->
 
-:   BSc Bioinformatics, *Freie Universität Berlin*, Germany
+<!-- :   BSc Bioinformatics, *Freie Universität Berlin*, Germany -->
 
-1994--2007
+<!-- 1994--2007 -->
 
-:   Abitur (A level), *Rudolf-Steiner-Schule Loheland*, Fulda, Germany
+<!-- :   Abitur (A level), *Rudolf-Steiner-Schule Loheland*, Fulda, Germany -->
 
 
----
+<!-- --- -->
 
-**Publications**
+<!-- **Publications** -->
 
--   Zepeda-Mendoza CJ\*, **Ibn-Salem J\***, Kammin T, Harris DJ, Rita D,
-    Gripp KW, MacKenzie JJ, Gropman A, Graham B, Shaheen R, Alkuraya FS,
-    Brasington CK, Spence EJ, Masser-Frye D, Bird LM, Spiegel E, Sparkes
-    RL, Ordulu Z, Talkowski ME, Andrade-Navarro MA, Robinson PN, Morton
-    CC.\
-    **Computational Prediction of Position Effects of Apparently
-    Balanced Human Chromosomal Rearrangements.**\
-    *Am J Hum Genet.* 2017 Aug 3;101(2):206-217. [doi:
-    10.1016/j.ajhg.2017.06.011](https://doi.org/10.1016/j.ajhg.2017.06.011).
+<!-- -   Zepeda-Mendoza CJ\*, **Ibn-Salem J\***, Kammin T, Harris DJ, Rita D, -->
+<!--     Gripp KW, MacKenzie JJ, Gropman A, Graham B, Shaheen R, Alkuraya FS, -->
+<!--     Brasington CK, Spence EJ, Masser-Frye D, Bird LM, Spiegel E, Sparkes -->
+<!--     RL, Ordulu Z, Talkowski ME, Andrade-Navarro MA, Robinson PN, Morton -->
+<!--     CC.\ -->
+<!--     **Computational Prediction of Position Effects of Apparently -->
+<!--     Balanced Human Chromosomal Rearrangements.**\ -->
+<!--     *Am J Hum Genet.* 2017 Aug 3;101(2):206-217. [doi: -->
+<!--     10.1016/j.ajhg.2017.06.011](https://doi.org/10.1016/j.ajhg.2017.06.011). -->
 
--   **Ibn-Salem J**, Muro EM, Andrade-Navarro MA.\
-    **Co-regulation of paralog genes in the three-dimensional chromatin
-    architecture.**\
-    *Nucleic Acids Research* 2017 Jan 9;45(1):81-91. [doi:
-    10.1093/nar/gkw813](https://doi.org/10.1093/nar/gkw813). \
+<!-- -   **Ibn-Salem J**, Muro EM, Andrade-Navarro MA.\ -->
+<!--     **Co-regulation of paralog genes in the three-dimensional chromatin -->
+<!--     architecture.**\ -->
+<!--     *Nucleic Acids Research* 2017 Jan 9;45(1):81-91. [doi: -->
+<!--     10.1093/nar/gkw813](https://doi.org/10.1093/nar/gkw813). \ -->
 
--   **Ibn-Salem, J**., Meiers, S., Eigenbrod, O., Sehlke, R., Talyan,
-    S., Schwahn, K., Otto, R., Pataskar, A., Metge, F., & Angerer, P.\
-    **Highlights of the 1st Student Symposium on Computational
-    Genomics.**\
-    *Genomics And Computational Biology*. 2017 2(1), e59.
-    [doi:10.18547/gcb.2016.vol2.iss1.e59](https://doi.org/10.18547/gcb.2016.vol2.iss1.e59)
+<!-- -   **Ibn-Salem, J**., Meiers, S., Eigenbrod, O., Sehlke, R., Talyan, -->
+<!--     S., Schwahn, K., Otto, R., Pataskar, A., Metge, F., & Angerer, P.\ -->
+<!--     **Highlights of the 1st Student Symposium on Computational -->
+<!--     Genomics.**\ -->
+<!--     *Genomics And Computational Biology*. 2017 2(1), e59. -->
+<!--     [doi:10.18547/gcb.2016.vol2.iss1.e59](https://doi.org/10.18547/gcb.2016.vol2.iss1.e59) -->
 
--   Hansen P, Hecht J, **Ibn-Salem J**, Menkuec BS, Roskosch S, Truss M,
-    Robinson PN.\
-    **Q-nexus: a comprehensive and efficient analysis pipeline designed
-    for ChIP-nexus.**\
-    *BMC Genomics*. 2016 Nov 4;17(1):873.
-    <https://doi.org/10.1186/s12864-016-3164-6>  \
+<!-- -   Hansen P, Hecht J, **Ibn-Salem J**, Menkuec BS, Roskosch S, Truss M, -->
+<!--     Robinson PN.\ -->
+<!--     **Q-nexus: a comprehensive and efficient analysis pipeline designed -->
+<!--     for ChIP-nexus.**\ -->
+<!--     *BMC Genomics*. 2016 Nov 4;17(1):873. -->
+<!--     <https://doi.org/10.1186/s12864-016-3164-6>  \ -->
 
--   Piacentino ML, Zuch DT, Fishman J, Rose S, Speranza EE, Li C, Yu J,
-    Chung O, Ramachandran J, Ferrell P, Patel V, Reyna A, Hameeduddin H,
-    Chaves J, Hewitt FB, Bardot E, Lee D, Core AB, Hogan JD, Keenan JL,
-    Luo L, Coulombe-Huntington J, Blute TA, Oleinik E, **Ibn-Salem J**,
-    Poustka AJ, Bradham CA.\
-    **RNA-Seq identifies SPGs as a ventral skeletal patterning cue in
-    sea urchins.**\
-    *Development*. 2016 Jan 11. [doi:
-    10.1242/dev.129312](https://doi.org/10.1242/dev.129312)  \
+<!-- -   Piacentino ML, Zuch DT, Fishman J, Rose S, Speranza EE, Li C, Yu J, -->
+<!--     Chung O, Ramachandran J, Ferrell P, Patel V, Reyna A, Hameeduddin H, -->
+<!--     Chaves J, Hewitt FB, Bardot E, Lee D, Core AB, Hogan JD, Keenan JL, -->
+<!--     Luo L, Coulombe-Huntington J, Blute TA, Oleinik E, **Ibn-Salem J**, -->
+<!--     Poustka AJ, Bradham CA.\ -->
+<!--     **RNA-Seq identifies SPGs as a ventral skeletal patterning cue in -->
+<!--     sea urchins.**\ -->
+<!--     *Development*. 2016 Jan 11. [doi: -->
+<!--     10.1242/dev.129312](https://doi.org/10.1242/dev.129312)  \ -->
 
--   Starick SR\*, **Ibn-Salem J\***, Jurk M, Hernandez C, Love MI, Chung
-    HR, Vingron M, Thomas-Chollier M, Meijsing SH.\
-    **ChIP-exo signal associated with DNA-binding motifs provides
-    insight into the genomic binding of the glucocorticoid receptor and
-    cooperating transcription factors**.\
-    *Genome Research*. 2015 Jun;25(6):825-35.
-    [doi:10.1101/gr.185157.114](https://doi.org/10.1101/gr.185157.114)
+<!-- -   Starick SR\*, **Ibn-Salem J\***, Jurk M, Hernandez C, Love MI, Chung -->
+<!--     HR, Vingron M, Thomas-Chollier M, Meijsing SH.\ -->
+<!--     **ChIP-exo signal associated with DNA-binding motifs provides -->
+<!--     insight into the genomic binding of the glucocorticoid receptor and -->
+<!--     cooperating transcription factors**.\ -->
+<!--     *Genome Research*. 2015 Jun;25(6):825-35. -->
+<!--     [doi:10.1101/gr.185157.114](https://doi.org/10.1101/gr.185157.114) -->
 
--   Köhler S, Schoeneberg U, Czeschik JC, Doelken SC, Hehir-Kwa JY,
-    **Ibn-Salem J**, Mungall CJ, Smedley D, Haendel MA, Robinson PN.\
-    **Clinical interpretation of CNVs with cross-species phenotype
-    data**.\
-    *J Med Genet*. 2014 Nov;51(11):766-772. [doi:
-    10.1136/jmedgenet-2014-102633](https://doi.org/10.1136/jmedgenet-2014-102633).
+<!-- -   Köhler S, Schoeneberg U, Czeschik JC, Doelken SC, Hehir-Kwa JY, -->
+<!--     **Ibn-Salem J**, Mungall CJ, Smedley D, Haendel MA, Robinson PN.\ -->
+<!--     **Clinical interpretation of CNVs with cross-species phenotype -->
+<!--     data**.\ -->
+<!--     *J Med Genet*. 2014 Nov;51(11):766-772. [doi: -->
+<!--     10.1136/jmedgenet-2014-102633](https://doi.org/10.1136/jmedgenet-2014-102633). -->
 
--   **Ibn-Salem J\***, Köhler S\*, Love MI, Chung HR, Huang N, Hurles
-    ME, Haendel M, Washington NL, Smedley D, Mungall CJ, Lewis SE, Ott
-    CE, Bauer S, Schofield PN, Mundlos S, Spielmann M, Robinson PN.\
-    **Deletions of chromosomal regulatory boundaries are associated with
-    congenital disease.**\
-    *Genome Biology*. 2014 Sep 4;15(9):423. [doi:
-    10.1186/s13059-014-0423-1](https://doi.org/10.1186/s13059-014-0423-1).
+<!-- -   **Ibn-Salem J\***, Köhler S\*, Love MI, Chung HR, Huang N, Hurles -->
+<!--     ME, Haendel M, Washington NL, Smedley D, Mungall CJ, Lewis SE, Ott -->
+<!--     CE, Bauer S, Schofield PN, Mundlos S, Spielmann M, Robinson PN.\ -->
+<!--     **Deletions of chromosomal regulatory boundaries are associated with -->
+<!--     congenital disease.**\ -->
+<!--     *Genome Biology*. 2014 Sep 4;15(9):423. [doi: -->
+<!--     10.1186/s13059-014-0423-1](https://doi.org/10.1186/s13059-014-0423-1). -->
 
-\* equal contributions
+<!-- \* equal contributions -->
 
-**Preprints**
+<!-- **Preprints** -->
 
--   Krefting J, Andrade-Navarro MA, **Ibn-Salem J^#^**. \
-    **Evolutionary stability of topologically associating domains is associated with conserved gene regulation.** \
-    *bioRxiv*. 2017. [doi:10.1101/231431](https://doi.org/10.1101/231431).
+<!-- -   Krefting J, Andrade-Navarro MA, **Ibn-Salem J^#^**. \ -->
+<!--     **Evolutionary stability of topologically associating domains is associated with conserved gene regulation.** \ -->
+<!--     *bioRxiv*. 2017. [doi:10.1101/231431](https://doi.org/10.1101/231431). -->
 
--   **Ibn-Salem J^#^**, Andrade-Navarro MA^#^. \
-    **Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs.**\
-    *bioRxiv*. February 2018:257584. [doi:10.1101/257584](https://doi.org/10.1101/257584).
+<!-- -   **Ibn-Salem J^#^**, Andrade-Navarro MA^#^. \ -->
+<!--     **Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs.**\ -->
+<!--     *bioRxiv*. February 2018:257584. [doi:10.1101/257584](https://doi.org/10.1101/257584). -->
 
-^#^ corresponding author
+<!-- ^#^ corresponding author -->
 
----
+<!-- --- -->
 
-**Invited Talks**
+<!-- **Invited Talks** -->
 
--   **Imperial College London, MRC London Institute of Medical Sciences**, 19 May. 2017, London, UK \
-    Title: *Evolution of TADs and prediction of chromatin looping*
+<!-- -   **Imperial College London, MRC London Institute of Medical Sciences**, 19 May. 2017, London, UK \ -->
+<!--     Title: *Evolution of TADs and prediction of chromatin looping* -->
 
--   **Humboldt University Berlin, Humboldt University Berlin**, 19 Dez. 2016, Berlin, Germany \
-    Title: *ChIP-seq and related techniques to analyze protein-DNA interactions and predict chromatin looping interactions.*
+<!-- -   **Humboldt University Berlin, Humboldt University Berlin**, 19 Dez. 2016, Berlin, Germany \ -->
+<!--     Title: *ChIP-seq and related techniques to analyze protein-DNA interactions and predict chromatin looping interactions.* -->
 
--   **Max-Planck-Institute for Molecular Genetics**, 04 Dez. 2015, Berlin, Germany \
-    Title: *Co-regulation of paralog genes in the 3D chromatin architecture*
+<!-- -   **Max-Planck-Institute for Molecular Genetics**, 04 Dez. 2015, Berlin, Germany \ -->
+<!--     Title: *Co-regulation of paralog genes in the 3D chromatin architecture* -->
 
----
+<!-- --- -->
 
-**Conference Presentations**
+<!-- **Conference Presentations** -->
 
--   **Basel Computational Biology Conference BC$^{2}$**, 12-15 Sept
-    2017, Basel, Switzerland \
-    Title: *Prediction of chromatin looping
-    interactions from ChIP-seq profiles at CTCF motifs*
+<!-- -   **Basel Computational Biology Conference BC$^{2}$**, 12-15 Sept -->
+<!--     2017, Basel, Switzerland \ -->
+<!--     Title: *Prediction of chromatin looping -->
+<!--     interactions from ChIP-seq profiles at CTCF motifs* -->
 
--   **ISCB European Student Council Symposium 2016**, 3 Sept 2016, The
-    Hauge, Netherlands \
-    Title: *Prediction of Chromatin Looping Events*
+<!-- -   **ISCB European Student Council Symposium 2016**, 3 Sept 2016, The -->
+<!--     Hauge, Netherlands \ -->
+<!--     Title: *Prediction of Chromatin Looping Events* -->
 
--   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin,
-    Ireland \
-    Title: *Co-regulation of human paralog genes in the
-    three-dimensional chromatin architecture*
+<!-- -   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin, -->
+<!--     Ireland \ -->
+<!--     Title: *Co-regulation of human paralog genes in the -->
+<!--     three-dimensional chromatin architecture* -->
 
----
+<!-- --- -->
 
-**Poster Presentations**
+<!-- **Poster Presentations** -->
 
--   **2017 IMB Conference: Gene Regulation by The Numbers**, 19 - 21
-    June 2017, Mainz, Germany \
-    Title: *Prediction of chromatin looping
-    interactions from ChIP-seq profiles at CTCF motifs*
+<!-- -   **2017 IMB Conference: Gene Regulation by The Numbers**, 19 - 21 -->
+<!--     June 2017, Mainz, Germany \ -->
+<!--     Title: *Prediction of chromatin looping -->
+<!--     interactions from ChIP-seq profiles at CTCF motifs* -->
 
--   **15th European Conference on Computational Biology**, 4-7 Sept
-    2016, The Hauge, Netherlands \
-    Title: *Co-regulation of paralog genes
-    in the three-dimensional chromatin architecture*
+<!-- -   **15th European Conference on Computational Biology**, 4-7 Sept -->
+<!--     2016, The Hauge, Netherlands \ -->
+<!--     Title: *Co-regulation of paralog genes -->
+<!--     in the three-dimensional chromatin architecture* -->
 
--   **German Conference on Bioinformatics 2016**, 12-15 Sept 2016,
-    Berlin, Germany \
-    Title: *Prediction of three-dimensional chromatin
-    looping from sequence motifs and protein binding signals*
+<!-- -   **German Conference on Bioinformatics 2016**, 12-15 Sept 2016, -->
+<!--     Berlin, Germany \ -->
+<!--     Title: *Prediction of three-dimensional chromatin -->
+<!--     looping from sequence motifs and protein binding signals* -->
 
--   **EMBO Conference: From Functional Genomics to Systems Biology**,
-    12-15 Nov 2016, Heidelberg, Germany \
-    Title: *Three-dimensional
-    chromatin looping predicted by CTCF motifs and ChIP-seq signals*
+<!-- -   **EMBO Conference: From Functional Genomics to Systems Biology**, -->
+<!--     12-15 Nov 2016, Heidelberg, Germany \ -->
+<!--     Title: *Three-dimensional -->
+<!--     chromatin looping predicted by CTCF motifs and ChIP-seq signals* -->
 
--   **RECOMB Comparative Genomics 2015**, 04-07 Oct. 2015, Frankfurt,
-    Germany \
-    Title: *Co-regulation of paralog genes in the
-    three-dimensional chromatin architecture*
+<!-- -   **RECOMB Comparative Genomics 2015**, 04-07 Oct. 2015, Frankfurt, -->
+<!--     Germany \ -->
+<!--     Title: *Co-regulation of paralog genes in the -->
+<!--     three-dimensional chromatin architecture* -->
 
--   **ISMB/ECCB Conference 2015**, 12-14 July, Dublin, Ireland \
-Title:
-    *Co-regulation of human paralog genes in the three-dimensional
-    chromatin architecture*
+<!-- -   **ISMB/ECCB Conference 2015**, 12-14 July, Dublin, Ireland \ -->
+<!-- Title: -->
+<!--     *Co-regulation of human paralog genes in the three-dimensional -->
+<!--     chromatin architecture* -->
 
--   **Regulatory Genomics Special Interest Group**, 11 July 2015,
-    Dublin, Ireland \
-    Title: *Co-regulation of human paralog genes in the
-    three-dimensional chromatin architecture*
+<!-- -   **Regulatory Genomics Special Interest Group**, 11 July 2015, -->
+<!--     Dublin, Ireland \ -->
+<!--     Title: *Co-regulation of human paralog genes in the -->
+<!--     three-dimensional chromatin architecture* -->
 
--   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin,
-    Ireland \
-    Title: *Co-regulation of human paralog genes in the
-    three-dimensional chromatin architecture*
+<!-- -   **ISCB Student Council Symposium 2015**, 10 July 2015, Dublin, -->
+<!--     Ireland \ -->
+<!--     Title: *Co-regulation of human paralog genes in the -->
+<!--     three-dimensional chromatin architecture* -->
 
--   **Genome Regulation in 3D Conference**, June 28-30, 2015, Rehovot,
-    Israel \
-    Title: *Co-regulation of human paralog genes in the
-    three-dimensional chromatin architecture*
+<!-- -   **Genome Regulation in 3D Conference**, June 28-30, 2015, Rehovot, -->
+<!--     Israel \ -->
+<!--     Title: *Co-regulation of human paralog genes in the -->
+<!--     three-dimensional chromatin architecture* -->
 
--   **German Conference on Bioinformatics 2014**, Sept. 29 - Oct. 1,
-    2014, Bielefeld, Germany \
-    Title: *Deletions of chromosomal regulatory
-    boundaries are associated with congenital disease*
+<!-- -   **German Conference on Bioinformatics 2014**, Sept. 29 - Oct. 1, -->
+<!--     2014, Bielefeld, Germany \ -->
+<!--     Title: *Deletions of chromosomal regulatory -->
+<!--     boundaries are associated with congenital disease* -->
 
--   **Annual Meeting of the AGD 2014**, Oct 10-11, Potsdam, Germany \
-    Title: *Deletions of chromosomal regulatory boundaries are
-    associated with congenital disease*
+<!-- -   **Annual Meeting of the AGD 2014**, Oct 10-11, Potsdam, Germany \ -->
+<!--     Title: *Deletions of chromosomal regulatory boundaries are -->
+<!--     associated with congenital disease* -->
 
----
+<!-- --- -->
 
-**Grants and Awards**
+<!-- **Grants and Awards** -->
 
--    **Travel Grant from gsk Stiftung** (350 EUR) for "`Genomic Regulation 2018"' workshop, 15-18 March 2018, Nendaz, Switzerland.
--    **Digital Future Scholarship** free admission (900 EUR) to "`The Digital Future"' conference on May 13th, 2017 in Berlin
--    **Scientific Event Grant 3,500 Euro** from Boehringer Ingelheim Stiftung for Student Symposium on Computational Genomics, Nov 30, 2016, Mainz
--    **Scientific Meeting Grant 1,500 GBP (~1,750 EUR)** from The Company of Biologists (EA1228) for Student Symposium on Computational Genomics, Nov 30, 2016, Mainz
--    **Travel Fellowship Award for 4th ISCB European Student Council Symposium 2016**, Sept 2016, The Hauge, Netherlands
--    **Digital Future Scholarship** free admission (900 EUR) to "`The Digital Future"' conference on May 11th, 2016 in Berlin
--    **F1000Research Poster Awards from ISMB/ECCB**
--    **Runner-up Poster Presentation Award form ISCB Student Council Symposium 2015**
--    **Travel Award to the Genome regulation in 3D meeting**, June 28-30, Weizmann Institute of Science, Rehovot, Israel
--    **Third poster price of Annual Meeting of the AGD 2014**
+<!-- -    **Travel Grant from gsk Stiftung** (350 EUR) for "`Genomic Regulation 2018"' workshop, 15-18 March 2018, Nendaz, Switzerland. -->
+<!-- -    **Digital Future Scholarship** free admission (900 EUR) to "`The Digital Future"' conference on May 13th, 2017 in Berlin -->
+<!-- -    **Scientific Event Grant 3,500 Euro** from Boehringer Ingelheim Stiftung for Student Symposium on Computational Genomics, Nov 30, 2016, Mainz -->
+<!-- -    **Scientific Meeting Grant 1,500 GBP (~1,750 EUR)** from The Company of Biologists (EA1228) for Student Symposium on Computational Genomics, Nov 30, 2016, Mainz -->
+<!-- -    **Travel Fellowship Award for 4th ISCB European Student Council Symposium 2016**, Sept 2016, The Hauge, Netherlands -->
+<!-- -    **Digital Future Scholarship** free admission (900 EUR) to "`The Digital Future"' conference on May 11th, 2016 in Berlin -->
+<!-- -    **F1000Research Poster Awards from ISMB/ECCB** -->
+<!-- -    **Runner-up Poster Presentation Award form ISCB Student Council Symposium 2015** -->
+<!-- -    **Travel Award to the Genome regulation in 3D meeting**, June 28-30, Weizmann Institute of Science, Rehovot, Israel -->
+<!-- -    **Third poster price of Annual Meeting of the AGD 2014** -->
 
----
+<!-- --- -->
 
-**Organizational Experience**
+<!-- **Organizational Experience** -->
 
- - **Student Symposium on Computational Genomics, Nov 30, 2016**, IMB, Mainz, Germany (main organizer and symposium chair)
+<!--  - **Student Symposium on Computational Genomics, Nov 30, 2016**, IMB, Mainz, Germany (main organizer and symposium chair) -->
 
----
+<!-- --- -->
 
-**Research Experience**
+<!-- **Research Experience** -->
 
-Sep 2014 -- Feb 2018
+<!-- Sep 2014 -- Feb 2018 -->
 
-:   **Research assistant and doctoral student**, *Johannes Gutenberg University Mainz* and *Institute of Molecular Biology (IMB)*, Mainz, Germany
+<!-- :   **Research assistant and doctoral student**, *Johannes Gutenberg University Mainz* and *Institute of Molecular Biology (IMB)*, Mainz, Germany -->
 
-May 2017 (for two weeks)
+<!-- May 2017 (for two weeks) -->
 
-:   **Lab visit**, *Imperial College London*, London, UK. Invited by Boris Lehnert and Matthias Merkenschlager. \
-Computational analysis of gene expression and 3D genome organization upon knock-down of cohesin in mouse macrophages and thymocytes
+<!-- :   **Lab visit**, *Imperial College London*, London, UK. Invited by Boris Lehnert and Matthias Merkenschlager. \ -->
+<!-- Computational analysis of gene expression and 3D genome organization upon knock-down of cohesin in mouse macrophages and thymocytes -->
 
-Jun 2014 -- August 2014
+<!-- Jun 2014 -- August 2014 -->
 
-:   **Research assistant**, *Computational Biology Group at Institute for Medical Genetics and Human Genetics*, Charité – Universitätsmedizin, Berlin, Germany. \
-Computational analysis of structural variations and phenotype associations.
+<!-- :   **Research assistant**, *Computational Biology Group at Institute for Medical Genetics and Human Genetics*, Charité – Universitätsmedizin, Berlin, Germany. \ -->
+<!-- Computational analysis of structural variations and phenotype associations. -->
 
-Sep 2013 -- Jun 2014
+<!-- Sep 2013 -- Jun 2014 -->
 
-:   **Student assistant (Master thesis project)**, *Department Vingron at Max Planck Institute for Molecular Genetics*, Berlin, Germany and *Institut de Biologie de l' Ecole Normale Superieure*, Paris, France \
-Transcription factor binding profiles in ChIP-exo data
+<!-- :   **Student assistant (Master thesis project)**, *Department Vingron at Max Planck Institute for Molecular Genetics*, Berlin, Germany and *Institut de Biologie de l' Ecole Normale Superieure*, Paris, France \ -->
+<!-- Transcription factor binding profiles in ChIP-exo data -->
 
-Apr 2013 -- Dec 2013
+<!-- Apr 2013 -- Dec 2013 -->
 
-:   **Student assistant**, *Computational Biology Group at Institute for Medical Genetics and Human Genetics*, Charité – Universitätsmedizin, Berlin \
-Modeling the effect of genomic deletions of regulatory barriers in the chromatin structure on gene regulation and phenotypes. 
+<!-- :   **Student assistant**, *Computational Biology Group at Institute for Medical Genetics and Human Genetics*, Charité – Universitätsmedizin, Berlin \ -->
+<!-- Modeling the effect of genomic deletions of regulatory barriers in the chromatin structure on gene regulation and phenotypes.  -->
 
-Jan 2011 -- Aug 2013
+<!-- Jan 2011 -- Aug 2013 -->
 
-:   **Student assistant**, *Max Planck Institute for Molecular Genetics*, Department Lehrarch, Group: Evolution and Development, Berlin 
+<!-- :   **Student assistant**, *Max Planck Institute for Molecular Genetics*, Department Lehrarch, Group: Evolution and Development, Berlin  -->
 <!-- \ -->
-<!-- Analysis of high-throughput sequencing data (whole genome sequencing, whole exome sequencing, variant calling andd annotation, RNA-seq, differntial expression) -->
+<!-- <!-- Analysis of high-throughput sequencing data (whole genome sequencing, whole exome sequencing, variant calling andd annotation, RNA-seq, differntial expression) --> -->
 
-# Acknowledgements {-}
+<!-- # Acknowledgements {-} -->
 
-This work would not have been possible without the input from many amazing colleagues and collaborators. 
-First of all, I would like to thanks my supervisor Miguel Andrade. 
-Miguel not only let me work on this exciting topic and was always open to my ideas, but he also had constant trust and interest in my work. He provided useful feedback and brilliant ideas. I highly appreciate his contributions and writing in all the here presented publications. 
+<!-- This work would not have been possible without the input from many amazing colleagues and collaborators.  -->
+<!-- First of all, I would like to thanks my supervisor Miguel Andrade.  -->
+<!-- Miguel not only let me work on this exciting topic and was always open to my ideas, but he also had constant trust and interest in my work. He provided useful feedback and brilliant ideas. I highly appreciate his contributions and writing in all the here presented publications.  -->
 
-All publications making up this thesis were collaborative efforts with significant contributions from other authors. I thank all of them for their contributions. I am grateful especially to Jan Krefting for his comprehensive and detailed analysis of TADs in evolution. It was always a pleasure to discuss and work with him. 
-I would like to thank especially Cinthya Zepeda-Mendoza who did most of the analysis and writing in the position effect project. It was always a pleasure and great experience to work with her. I also thank Cynthia C. Morton and Nick Robinson for initializing this collaboration and their input. I appreciate the contribution of all DGAP subjects and their families to this and other research by providing their data.
+<!-- All publications making up this thesis were collaborative efforts with significant contributions from other authors. I thank all of them for their contributions. I am grateful especially to Jan Krefting for his comprehensive and detailed analysis of TADs in evolution. It was always a pleasure to discuss and work with him.  -->
+<!-- I would like to thank especially Cinthya Zepeda-Mendoza who did most of the analysis and writing in the position effect project. It was always a pleasure and great experience to work with her. I also thank Cynthia C. Morton and Nick Robinson for initializing this collaboration and their input. I appreciate the contribution of all DGAP subjects and their families to this and other research by providing their data. -->
 
-I thank the entire CBDM group at IMB and JGU Mainz, consisting of 
-Miguel Andrade,
-Enrique Muro, 
-Jean-Fred Fontaine,
-Katerina Taškova,
-Sweta Talyan,
-Pablo Mier Muñoz,
-Gregorio Alanís Lobato,
-Tommaso Andreani,
-Steffen Albrecht,
-Susanne Klingens,
-and Birgit Reubert.
-I thank them for a great time in this exciting group. 
+<!-- I thank the entire CBDM group at IMB and JGU Mainz, consisting of  -->
+<!-- Miguel Andrade, -->
+<!-- Enrique Muro,  -->
+<!-- Jean-Fred Fontaine, -->
+<!-- Katerina Taškova, -->
+<!-- Sweta Talyan, -->
+<!-- Pablo Mier Muñoz, -->
+<!-- Gregorio Alanís Lobato, -->
+<!-- Tommaso Andreani, -->
+<!-- Steffen Albrecht, -->
+<!-- Susanne Klingens, -->
+<!-- and Birgit Reubert. -->
+<!-- I thank them for a great time in this exciting group.  -->
 
-I met regularly with my thesis advisory committee, consisting of Miguel, Vijay Tiwari, Christoph Cremer, and Peter Nick Robinson. 
-I appreciate the insightful discussions and useful feedback during these meetings.
-Furthermore, I thank Susanne Gerber for her interest and time to review my thesis. 
-I thank David Fournier for reading, correcting and commenting the thesis draft. 
-Moreover, I thank Dimitris Polychronopoulos for a great and inspiring time during a research-stay at MRC London.
-Last but not least, I would like to thank my partner in life, Marlien, for her motivation, her understanding, her patience and her endless support. This work would have never finished without her. 
+<!-- I met regularly with my thesis advisory committee, consisting of Miguel, Vijay Tiwari, Christoph Cremer, and Peter Nick Robinson.  -->
+<!-- I appreciate the insightful discussions and useful feedback during these meetings. -->
+<!-- Furthermore, I thank Susanne Gerber for her interest and time to review my thesis.  -->
+<!-- I thank David Fournier for reading, correcting and commenting the thesis draft.  -->
+<!-- Moreover, I thank Dimitris Polychronopoulos for a great and inspiring time during a research-stay at MRC London. -->
+<!-- Last but not least, I would like to thank my partner in life, Marlien, for her motivation, her understanding, her patience and her endless support. This work would have never finished without her.  -->
 
 
