--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -82,20 +82,32 @@
 \newcommand{\thesisTitle}{Genome folding in evolution and disease}
 \newcommand{\thesisName}{Jonas Ibn-Salem}
 \newcommand{\thesisSubject}{Dissertation}
-% \newcommand{\thesisDate}{January, 2018}
-\newcommand{\thesisDate}{\today}
-\newcommand{\thesisVersion}{0.1.1}
+\newcommand{\thesisDate}{February, 2018}
+% \newcommand{\thesisDate}{\today}
+\newcommand{\thesisVersion}{0.1.2}
 
-\newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
-\newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
-\newcommand{\thesisFirstReviewerDepartment}{Faculty of Biology}
+% \newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
+% \newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
+% \newcommand{\thesisFirstReviewerDepartment}{Faculty of Biology}
+%
+% \newcommand{\thesisSecondReviewer}{Jun.-Prof. Dr. Susanne Gerber}
+% \newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
+% \newcommand{\thesisSecondReviewerDepartment}{Faculty of Biology and Center for Computational Sciences in Mainz}
+%
+% \newcommand{\thesisFirstSupervisor}{Prof. Dr. Miguel Andrade-Navarro}
+% \newcommand{\thesisSecondSupervisor}{}
 
-\newcommand{\thesisSecondReviewer}{Jun.-Prof. Dr. Susanne Gerber}
-\newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
-\newcommand{\thesisSecondReviewerDepartment}{Faculty of Biology and Center for Computational Sciences in Mainz}
+\newcommand{\thesisFirstReviewer}{~}
+\newcommand{\thesisFirstReviewerUniversity}{~}
+\newcommand{\thesisFirstReviewerDepartment}{~}
 
-\newcommand{\thesisFirstSupervisor}{Prof. Dr. Miguel Andrade-Navarro}
+\newcommand{\thesisSecondReviewer}{~}
+\newcommand{\thesisSecondReviewerUniversity}{~}
+\newcommand{\thesisSecondReviewerDepartment}{~}
+
+\newcommand{\thesisFirstSupervisor}{~}
 \newcommand{\thesisSecondSupervisor}{}
+
 
 \newcommand{\thesisUniversity}{\protect{Johannes Gutenberg University Mainz}}
 \newcommand{\thesisUniversityDepartment}{Faculty of Biology}
@@ -162,7 +174,7 @@
 
 \title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-03-02}
+\date{2018-08-19}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -7329,366 +7341,7 @@ Daher wird es zunehmend wichtig, die Faltung des Genoms zu
 berücksichtigen, sowohl in der genomischen Forschung, als auch in der
 klinischen Praxis.
 
-\hypertarget{curriculum-vitae}{%
-\chapter*{Curriculum vitae}\label{curriculum-vitae}}
-\addcontentsline{toc}{chapter}{Curriculum vitae}
-
-\textbf{Jonas Ibn-Salem}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Personal data }
-
-\begin{description}
-\item[Date of birth]
-24.07.1987
-\item[Place of birth]
-Mamers (France)
-\item[Nationality]
-German
-\end{description}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Education}
-
-\begin{description}
-\item[2014--2018]
-PhD in Computational Biology, \emph{Johannes Gutenberg University Mainz
-and Institute of Molecular Biology (IMB)}, Mainz, Germany
-\item[2011--2014]
-MSc Bioinformatics, \emph{Freie Universität Berlin}, Germany
-\item[2008--2011]
-BSc Bioinformatics, \emph{Freie Universität Berlin}, Germany
-\item[1994--2007]
-Abitur (A level), \emph{Rudolf-Steiner-Schule Loheland}, Fulda, Germany
-\end{description}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Publications}
-
-\begin{itemize}
-\item
-  Zepeda-Mendoza CJ*, \textbf{Ibn-Salem J*}, Kammin T, Harris DJ, Rita
-  D, Gripp KW, MacKenzie JJ, Gropman A, Graham B, Shaheen R, Alkuraya
-  FS, Brasington CK, Spence EJ, Masser-Frye D, Bird LM, Spiegel E,
-  Sparkes RL, Ordulu Z, Talkowski ME, Andrade-Navarro MA, Robinson PN,
-  Morton CC.\\
-  \textbf{Computational Prediction of Position Effects of Apparently
-  Balanced Human Chromosomal Rearrangements.}\\
-  \emph{Am J Hum Genet.} 2017 Aug 3;101(2):206-217.
-  \href{https://doi.org/10.1016/j.ajhg.2017.06.011}{doi:
-  10.1016/j.ajhg.2017.06.011}.
-\item
-  \textbf{Ibn-Salem J}, Muro EM, Andrade-Navarro MA.\\
-  \textbf{Co-regulation of paralog genes in the three-dimensional
-  chromatin architecture.}\\
-  \emph{Nucleic Acids Research} 2017 Jan 9;45(1):81-91.
-  \href{https://doi.org/10.1093/nar/gkw813}{doi: 10.1093/nar/gkw813}.\\
-\item
-  \textbf{Ibn-Salem, J}., Meiers, S., Eigenbrod, O., Sehlke, R., Talyan,
-  S., Schwahn, K., Otto, R., Pataskar, A., Metge, F., \& Angerer, P.\\
-  \textbf{Highlights of the 1st Student Symposium on Computational
-  Genomics.}\\
-  \emph{Genomics And Computational Biology}. 2017 2(1), e59.
-  \href{https://doi.org/10.18547/gcb.2016.vol2.iss1.e59}{doi:10.18547/gcb.2016.vol2.iss1.e59}
-\item
-  Hansen P, Hecht J, \textbf{Ibn-Salem J}, Menkuec BS, Roskosch S, Truss
-  M, Robinson PN.\\
-  \textbf{Q-nexus: a comprehensive and efficient analysis pipeline
-  designed for ChIP-nexus.}\\
-  \emph{BMC Genomics}. 2016 Nov 4;17(1):873.
-  \url{https://doi.org/10.1186/s12864-016-3164-6} ~\\
-\item
-  Piacentino ML, Zuch DT, Fishman J, Rose S, Speranza EE, Li C, Yu J,
-  Chung O, Ramachandran J, Ferrell P, Patel V, Reyna A, Hameeduddin H,
-  Chaves J, Hewitt FB, Bardot E, Lee D, Core AB, Hogan JD, Keenan JL,
-  Luo L, Coulombe-Huntington J, Blute TA, Oleinik E, \textbf{Ibn-Salem
-  J}, Poustka AJ, Bradham CA.\\
-  \textbf{RNA-Seq identifies SPGs as a ventral skeletal patterning cue
-  in sea urchins.}\\
-  \emph{Development}. 2016 Jan 11.
-  \href{https://doi.org/10.1242/dev.129312}{doi: 10.1242/dev.129312} ~\\
-\item
-  Starick SR*, \textbf{Ibn-Salem J*}, Jurk M, Hernandez C, Love MI,
-  Chung HR, Vingron M, Thomas-Chollier M, Meijsing SH.\\
-  \textbf{ChIP-exo signal associated with DNA-binding motifs provides
-  insight into the genomic binding of the glucocorticoid receptor and
-  cooperating transcription factors}.\\
-  \emph{Genome Research}. 2015 Jun;25(6):825-35.
-  \href{https://doi.org/10.1101/gr.185157.114}{doi:10.1101/gr.185157.114}
-\item
-  Köhler S, Schoeneberg U, Czeschik JC, Doelken SC, Hehir-Kwa JY,
-  \textbf{Ibn-Salem J}, Mungall CJ, Smedley D, Haendel MA, Robinson
-  PN.\\
-  \textbf{Clinical interpretation of CNVs with cross-species phenotype
-  data}.\\
-  \emph{J Med Genet}. 2014 Nov;51(11):766-772.
-  \href{https://doi.org/10.1136/jmedgenet-2014-102633}{doi:
-  10.1136/jmedgenet-2014-102633}.
-\item
-  \textbf{Ibn-Salem J*}, Köhler S*, Love MI, Chung HR, Huang N, Hurles
-  ME, Haendel M, Washington NL, Smedley D, Mungall CJ, Lewis SE, Ott CE,
-  Bauer S, Schofield PN, Mundlos S, Spielmann M, Robinson PN.\\
-  \textbf{Deletions of chromosomal regulatory boundaries are associated
-  with congenital disease.}\\
-  \emph{Genome Biology}. 2014 Sep 4;15(9):423.
-  \href{https://doi.org/10.1186/s13059-014-0423-1}{doi:
-  10.1186/s13059-014-0423-1}.
-\end{itemize}
-
-* equal contributions
-
-\textbf{Preprints}
-
-\begin{itemize}
-\item
-  Krefting J, Andrade-Navarro MA, \textbf{Ibn-Salem
-  J\textsuperscript{\#}}.\\
-  \textbf{Evolutionary stability of topologically associating domains is
-  associated with conserved gene regulation.}\\
-  \emph{bioRxiv}. 2017.
-  \href{https://doi.org/10.1101/231431}{doi:10.1101/231431}.
-\item
-  \textbf{Ibn-Salem J\textsuperscript{\#}}, Andrade-Navarro
-  MA\textsuperscript{\#}.\\
-  \textbf{Computational Chromosome Conformation Capture by Correlation
-  of ChIP-seq at CTCF motifs.}\\
-  \emph{bioRxiv}. February 2018:257584.
-  \href{https://doi.org/10.1101/257584}{doi:10.1101/257584}.
-\end{itemize}
-
-\textsuperscript{\#} corresponding author
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Invited Talks}
-
-\begin{itemize}
-\item
-  \textbf{Imperial College London, MRC London Institute of Medical
-  Sciences}, 19 May. 2017, London, UK\\
-  Title: \emph{Evolution of TADs and prediction of chromatin looping}
-\item
-  \textbf{Humboldt University Berlin, Humboldt University Berlin}, 19
-  Dez. 2016, Berlin, Germany\\
-  Title: \emph{ChIP-seq and related techniques to analyze protein-DNA
-  interactions and predict chromatin looping interactions.}
-\item
-  \textbf{Max-Planck-Institute for Molecular Genetics}, 04 Dez. 2015,
-  Berlin, Germany\\
-  Title: \emph{Co-regulation of paralog genes in the 3D chromatin
-  architecture}
-\end{itemize}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Conference Presentations}
-
-\begin{itemize}
-\item
-  \textbf{Basel Computational Biology Conference BC\(^{2}\)}, 12-15 Sept
-  2017, Basel, Switzerland\\
-  Title: \emph{Prediction of chromatin looping interactions from
-  ChIP-seq profiles at CTCF motifs}
-\item
-  \textbf{ISCB European Student Council Symposium 2016}, 3 Sept 2016,
-  The Hauge, Netherlands\\
-  Title: \emph{Prediction of Chromatin Looping Events}
-\item
-  \textbf{ISCB Student Council Symposium 2015}, 10 July 2015, Dublin,
-  Ireland\\
-  Title: \emph{Co-regulation of human paralog genes in the
-  three-dimensional chromatin architecture}
-\end{itemize}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Poster Presentations}
-
-\begin{itemize}
-\item
-  \textbf{2017 IMB Conference: Gene Regulation by The Numbers}, 19 - 21
-  June 2017, Mainz, Germany\\
-  Title: \emph{Prediction of chromatin looping interactions from
-  ChIP-seq profiles at CTCF motifs}
-\item
-  \textbf{15th European Conference on Computational Biology}, 4-7 Sept
-  2016, The Hauge, Netherlands\\
-  Title: \emph{Co-regulation of paralog genes in the three-dimensional
-  chromatin architecture}
-\item
-  \textbf{German Conference on Bioinformatics 2016}, 12-15 Sept 2016,
-  Berlin, Germany\\
-  Title: \emph{Prediction of three-dimensional chromatin looping from
-  sequence motifs and protein binding signals}
-\item
-  \textbf{EMBO Conference: From Functional Genomics to Systems Biology},
-  12-15 Nov 2016, Heidelberg, Germany\\
-  Title: \emph{Three-dimensional chromatin looping predicted by CTCF
-  motifs and ChIP-seq signals}
-\item
-  \textbf{RECOMB Comparative Genomics 2015}, 04-07 Oct.~2015, Frankfurt,
-  Germany\\
-  Title: \emph{Co-regulation of paralog genes in the three-dimensional
-  chromatin architecture}
-\item
-  \textbf{ISMB/ECCB Conference 2015}, 12-14 July, Dublin, Ireland\\
-  Title: \emph{Co-regulation of human paralog genes in the
-  three-dimensional chromatin architecture}
-\item
-  \textbf{Regulatory Genomics Special Interest Group}, 11 July 2015,
-  Dublin, Ireland\\
-  Title: \emph{Co-regulation of human paralog genes in the
-  three-dimensional chromatin architecture}
-\item
-  \textbf{ISCB Student Council Symposium 2015}, 10 July 2015, Dublin,
-  Ireland\\
-  Title: \emph{Co-regulation of human paralog genes in the
-  three-dimensional chromatin architecture}
-\item
-  \textbf{Genome Regulation in 3D Conference}, June 28-30, 2015,
-  Rehovot, Israel\\
-  Title: \emph{Co-regulation of human paralog genes in the
-  three-dimensional chromatin architecture}
-\item
-  \textbf{German Conference on Bioinformatics 2014}, Sept.~29 - Oct.~1,
-  2014, Bielefeld, Germany\\
-  Title: \emph{Deletions of chromosomal regulatory boundaries are
-  associated with congenital disease}
-\item
-  \textbf{Annual Meeting of the AGD 2014}, Oct 10-11, Potsdam, Germany\\
-  Title: \emph{Deletions of chromosomal regulatory boundaries are
-  associated with congenital disease}
-\end{itemize}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Grants and Awards}
-
-\begin{itemize}
-\tightlist
-\item
-  \textbf{Travel Grant from gsk Stiftung} (350 EUR) for ```Genomic
-  Regulation 2018''' workshop, 15-18 March 2018, Nendaz, Switzerland.
-\item
-  \textbf{Digital Future Scholarship} free admission (900 EUR) to ```The
-  Digital Future''' conference on May 13th, 2017 in Berlin
-\item
-  \textbf{Scientific Event Grant 3,500 Euro} from Boehringer Ingelheim
-  Stiftung for Student Symposium on Computational Genomics, Nov 30,
-  2016, Mainz
-\item
-  \textbf{Scientific Meeting Grant 1,500 GBP (\textasciitilde{}1,750
-  EUR)} from The Company of Biologists (EA1228) for Student Symposium on
-  Computational Genomics, Nov 30, 2016, Mainz
-\item
-  \textbf{Travel Fellowship Award for 4th ISCB European Student Council
-  Symposium 2016}, Sept 2016, The Hauge, Netherlands
-\item
-  \textbf{Digital Future Scholarship} free admission (900 EUR) to ```The
-  Digital Future''' conference on May 11th, 2016 in Berlin
-\item
-  \textbf{F1000Research Poster Awards from ISMB/ECCB}
-\item
-  \textbf{Runner-up Poster Presentation Award form ISCB Student Council
-  Symposium 2015}
-\item
-  \textbf{Travel Award to the Genome regulation in 3D meeting}, June
-  28-30, Weizmann Institute of Science, Rehovot, Israel
-\item
-  \textbf{Third poster price of Annual Meeting of the AGD 2014}
-\end{itemize}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Organizational Experience}
-
-\begin{itemize}
-\tightlist
-\item
-  \textbf{Student Symposium on Computational Genomics, Nov 30, 2016},
-  IMB, Mainz, Germany (main organizer and symposium chair)
-\end{itemize}
-
-\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-
-\textbf{Research Experience}
-
-\begin{description}
-\item[Sep 2014 -- Feb 2018]
-\textbf{Research assistant and doctoral student}, \emph{Johannes
-Gutenberg University Mainz} and \emph{Institute of Molecular Biology
-(IMB)}, Mainz, Germany
-\item[May 2017 (for two weeks)]
-\textbf{Lab visit}, \emph{Imperial College London}, London, UK. Invited
-by Boris Lehnert and Matthias Merkenschlager.\\
-Computational analysis of gene expression and 3D genome organization
-upon knock-down of cohesin in mouse macrophages and thymocytes
-\item[Jun 2014 -- August 2014]
-\textbf{Research assistant}, \emph{Computational Biology Group at
-Institute for Medical Genetics and Human Genetics}, Charité --
-Universitätsmedizin, Berlin, Germany.\\
-Computational analysis of structural variations and phenotype
-associations.
-\item[Sep 2013 -- Jun 2014]
-\textbf{Student assistant (Master thesis project)}, \emph{Department
-Vingron at Max Planck Institute for Molecular Genetics}, Berlin, Germany
-and \emph{Institut de Biologie de l' Ecole Normale Superieure}, Paris,
-France\\
-Transcription factor binding profiles in ChIP-exo data
-\item[Apr 2013 -- Dec 2013]
-\textbf{Student assistant}, \emph{Computational Biology Group at
-Institute for Medical Genetics and Human Genetics}, Charité --
-Universitätsmedizin, Berlin\\
-Modeling the effect of genomic deletions of regulatory barriers in the
-chromatin structure on gene regulation and phenotypes.
-\item[Jan 2011 -- Aug 2013]
-\textbf{Student assistant}, \emph{Max Planck Institute for Molecular
-Genetics}, Department Lehrarch, Group: Evolution and Development, Berlin
-\end{description}
-
-\hypertarget{acknowledgements-2}{%
-\chapter*{Acknowledgements}\label{acknowledgements-2}}
-\addcontentsline{toc}{chapter}{Acknowledgements}
-
-This work would not have been possible without the input from many
-amazing colleagues and collaborators. First of all, I would like to
-thanks my supervisor Miguel Andrade. Miguel not only let me work on this
-exciting topic and was always open to my ideas, but he also had constant
-trust and interest in my work. He provided useful feedback and brilliant
-ideas. I highly appreciate his contributions and writing in all the here
-presented publications.
-
-All publications making up this thesis were collaborative efforts with
-significant contributions from other authors. I thank all of them for
-their contributions. I am grateful especially to Jan Krefting for his
-comprehensive and detailed analysis of TADs in evolution. It was always
-a pleasure to discuss and work with him. I would like to thank
-especially Cinthya Zepeda-Mendoza who did most of the analysis and
-writing in the position effect project. It was always a pleasure and
-great experience to work with her. I also thank Cynthia C. Morton and
-Nick Robinson for initializing this collaboration and their input. I
-appreciate the contribution of all DGAP subjects and their families to
-this and other research by providing their data.
-
-I thank the entire CBDM group at IMB and JGU Mainz, consisting of Miguel
-Andrade, Enrique Muro, Jean-Fred Fontaine, Katerina Taškova, Sweta
-Talyan, Pablo Mier Muñoz, Gregorio Alanís Lobato, Tommaso Andreani,
-Steffen Albrecht, Susanne Klingens, and Birgit Reubert. I thank them for
-a great time in this exciting group.
-
-I met regularly with my thesis advisory committee, consisting of Miguel,
-Vijay Tiwari, Christoph Cremer, and Peter Nick Robinson. I appreciate
-the insightful discussions and useful feedback during these meetings.
-Furthermore, I thank Susanne Gerber for her interest and time to review
-my thesis. I thank David Fournier for reading, correcting and commenting
-the thesis draft. Moreover, I thank Dimitris Polychronopoulos for a
-great and inspiring time during a research-stay at MRC London. Last but
-not least, I would like to thank my partner in life, Marlien, for her
-motivation, her understanding, her patience and her endless support.
-This work would have never finished without her.
+--\textgreater{}
 
 \bibliography{bib/PhDfltClean.bib}
 
