--- a/preamble.tex
+++ b/preamble.tex
@@ -21,20 +21,32 @@
 \newcommand{\thesisTitle}{Genome folding in evolution and disease}
 \newcommand{\thesisName}{Jonas Ibn-Salem}
 \newcommand{\thesisSubject}{Dissertation}
-% \newcommand{\thesisDate}{January, 2018}
-\newcommand{\thesisDate}{\today}
-\newcommand{\thesisVersion}{0.1.1}
+\newcommand{\thesisDate}{February, 2018}
+% \newcommand{\thesisDate}{\today}
+\newcommand{\thesisVersion}{0.1.2}
 
-\newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
-\newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
-\newcommand{\thesisFirstReviewerDepartment}{Faculty of Biology}
+% \newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
+% \newcommand{\thesisFirstReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
+% \newcommand{\thesisFirstReviewerDepartment}{Faculty of Biology}
+%
+% \newcommand{\thesisSecondReviewer}{Jun.-Prof. Dr. Susanne Gerber}
+% \newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
+% \newcommand{\thesisSecondReviewerDepartment}{Faculty of Biology and Center for Computational Sciences in Mainz}
+%
+% \newcommand{\thesisFirstSupervisor}{Prof. Dr. Miguel Andrade-Navarro}
+% \newcommand{\thesisSecondSupervisor}{}
 
-\newcommand{\thesisSecondReviewer}{Jun.-Prof. Dr. Susanne Gerber}
-\newcommand{\thesisSecondReviewerUniversity}{\protect{Johannes Gutenberg University Mainz}}
-\newcommand{\thesisSecondReviewerDepartment}{Faculty of Biology and Center for Computational Sciences in Mainz}
+\newcommand{\thesisFirstReviewer}{~}
+\newcommand{\thesisFirstReviewerUniversity}{~}
+\newcommand{\thesisFirstReviewerDepartment}{~}
 
-\newcommand{\thesisFirstSupervisor}{Prof. Dr. Miguel Andrade-Navarro}
+\newcommand{\thesisSecondReviewer}{~}
+\newcommand{\thesisSecondReviewerUniversity}{~}
+\newcommand{\thesisSecondReviewerDepartment}{~}
+
+\newcommand{\thesisFirstSupervisor}{~}
 \newcommand{\thesisSecondSupervisor}{}
+
 
 \newcommand{\thesisUniversity}{\protect{Johannes Gutenberg University Mainz}}
 \newcommand{\thesisUniversityDepartment}{Faculty of Biology}
