update German abstract

--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -174,7 +174,7 @@
 
 \title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-08-19}
+\date{2018-08-27}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -7311,37 +7311,36 @@ pre- or post-publication stages.\strut
 \chapter*{Zusammenfassung}\label{zusammenfassung}}
 \addcontentsline{toc}{chapter}{Zusammenfassung}
 
-Das menschliche Genome ist hierarchisch gefaltet im dreidimensionalen
-Zellkern. Paarweise Chromatin Interaktionen kommen gebündelt in
-diskreten chromosomalen Regionen vor, die topologically associating
+Im dreidimensionalen Zellkern ist das menschliche Genome hierarchisch
+gefaltet. Paarweise Chromatin Interaktionen kommen gebündelt in
+diskreten chromosomalen Regionen vor, welche topologically associating
 domains (TADs) genannt werden. Ob TADs eine essenzielle Rolle spielen
-für die Regulation von Genexpression in der Evolution und in
+für die Regulation der Genexpression in der Evolution und in
 Krankheiten, wird in dieser Dissertation untersucht. Dazu werden
-genomweite Interaktions-Karten mit verschiedensten Daten entlang des
-linearen Genoms computergestützt integriert.
+genomweite Chromatin Interaktions-Karten mit verschiedensten Daten, die
+entlang des linearen Genoms erhoben wurden, computergestützt integriert
+und analysiert.
 
-Dabei gruppieren sich funktional ähnliche Gene in TADs und teilen
+Funktional ähnliche Gene gruppieren sich dabei in TADs und teilen sich
 regulatorische Elemente im Genom, um eine koordinierte Expression zu
-ermöglichen. TADs werden mehrheitlich stabil durch die Evolution vererbt
+ermöglichen. TADs werden mehrheitlich stabil über die Evolution vererbt
 und sind mit konservierter Genexpression assoziiert. Zerstörungen von
 TADs durch Chromosomenmutationen während der Evolution oder in
 genetischen Erkrankungen sind mit Änderungen von Genexpression
 assoziiert. Daten über Chromatin Interaktionen und TADs können genutzt
-werden, um genregulatorische Effekte von strukturellen
+werden, um gen-regulatorische Effekte von strukturellen
 Chromosomenaberration zu interpretieren, wie hier anhand von Patienten
-mit diversen klinischen Phänotypen gezeigt wird. Ausserdem wurde eine
+mit diversen klinischen Phänotypen gezeigt wird. Außerdem wurde eine
 Software entwickelt, um anhand von genetischen Sequenzeigenschaften und
-gewebespezifischen Signalen von Protein-Bindestellen, genomweite
+Gewebe-spezifischen Signalen von Protein-Bindestellen, genomweite
 Chromatin Interaktionen mit hoher Genauigkeit vorherzusagen.
 
-Dieses Arbeit zeigt, dass TADs nicht nur strukturelle Einheiten von
+Diese Arbeit zeigt, dass TADs nicht nur strukturelle Einheiten von
 Chromosomen sind, sondern entscheidende funktionale Bausteine von
 Genomen sind, welche das regulatorische Umfeld von Genen definieren.
 Daher wird es zunehmend wichtig, die Faltung des Genoms zu
 berücksichtigen, sowohl in der genomischen Forschung, als auch in der
 klinischen Praxis.
-
---\textgreater{}
 
 \bibliography{bib/PhDfltClean.bib}
 
