--- a/layout_content/titlepages.tex
+++ b/layout_content/titlepages.tex
@@ -67,7 +67,7 @@
 	{\LARGE \color{ctcolortitle}\textbf{\thesisTitle} \\[10mm]}
 	{\Large \thesisName} \\
 
-	% \vfill
+	\vfill
 	% \begin{minipage}[t]{.27\textwidth}
 	% 	\raggedleft
 	% 	\textit{1. Reviewer}
