update for printed publication

--- a/layout_content/titlepages.tex
+++ b/layout_content/titlepages.tex
@@ -34,10 +34,10 @@
 
 
 % ------------------------------------  --> second page
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
+% \newpage
+% \thispagestyle{empty}
+% \mbox{}
+% \newpage
 
 \hfill
 \vfill
@@ -46,7 +46,7 @@
 	Dekan: Prof. Dr. Walter Stöcker \\
 	1. Berichterstatter: \thesisFirstReviewer \\
 	2. Berichterstatterin: \thesisSecondReviewer \\
-	Tag der mündlichen Prüfung: \\
+	Tag der mündlichen Prüfung: 10. August 2018 \\
 }
 
 
