--- a/preamble.tex
+++ b/preamble.tex
@@ -22,7 +22,7 @@
 \newcommand{\thesisName}{Jonas Ibn-Salem}
 \newcommand{\thesisSubject}{Dissertation}
 % \newcommand{\thesisDate}{January, 2018}
-\newcommand{\thesisDate}{\today}
+\newcommand{\thesisDate}{February, 2018}
 \newcommand{\thesisVersion}{0.1.1}
 
 \newcommand{\thesisFirstReviewer}{Prof. Dr. Miguel Andrade-Navarro}
