--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -796,11 +796,12 @@ Table: (\#tab:contribution) **Contributions to individual publications**. Contri
 
 # Zusammenfassung {-}
 
-Das menschliche Genome ist hierarchisch gefaltet im dreidimensionalen Zellkern. Paarweise Chromatin Interaktionen kommen gebündelt in diskreten chromosomalen Regionen vor, die topologically associating domains (TADs) genannt werden. Ob TADs eine essenzielle Rolle spielen für die Regulation von Genexpression in der Evolution und in Krankheiten, wird in dieser Dissertation untersucht. Dazu werden genomweite Interaktions-Karten mit verschiedensten Daten entlang des linearen Genoms computergestützt integriert. 
 
-Dabei gruppieren sich funktional ähnliche Gene in TADs und teilen regulatorische Elemente im Genom, um eine koordinierte Expression zu ermöglichen. TADs werden mehrheitlich stabil durch die Evolution vererbt und sind mit konservierter Genexpression assoziiert. Zerstörungen von TADs durch Chromosomenmutationen während der Evolution oder in genetischen Erkrankungen sind mit Änderungen von Genexpression assoziiert. Daten über Chromatin Interaktionen und TADs können genutzt werden, um genregulatorische Effekte von strukturellen Chromosomenaberration zu interpretieren, wie hier anhand von Patienten mit diversen klinischen Phänotypen gezeigt wird. Ausserdem wurde eine Software entwickelt, um anhand von genetischen Sequenzeigenschaften und gewebespezifischen Signalen von Protein-Bindestellen, genomweite Chromatin Interaktionen mit hoher Genauigkeit vorherzusagen.
+Im dreidimensionalen Zellkern ist das menschliche Genome hierarchisch gefaltet. Paarweise Chromatin Interaktionen kommen gebündelt in diskreten chromosomalen Regionen vor, welche topologically associating domains (TADs) genannt werden. Ob TADs eine essenzielle Rolle spielen für die Regulation der Genexpression in der Evolution und in Krankheiten, wird in dieser Dissertation untersucht. Dazu werden genomweite Chromatin Interaktions-Karten mit verschiedensten Daten, die entlang des linearen Genoms erhoben wurden, computergestützt integriert und analysiert.
 
-Dieses Arbeit zeigt, dass TADs nicht nur strukturelle Einheiten von Chromosomen sind, sondern entscheidende funktionale Bausteine von Genomen sind, welche das regulatorische Umfeld von Genen definieren. Daher wird es zunehmend wichtig, die Faltung des Genoms zu berücksichtigen, sowohl in der genomischen Forschung, als auch in der klinischen Praxis.
+Funktional ähnliche Gene gruppieren sich dabei in TADs und teilen sich regulatorische Elemente im Genom, um eine koordinierte Expression zu ermöglichen. TADs werden mehrheitlich stabil über die Evolution vererbt und sind mit konservierter Genexpression assoziiert. Zerstörungen von TADs durch Chromosomenmutationen während der Evolution oder in genetischen Erkrankungen sind mit Änderungen von Genexpression assoziiert. Daten über Chromatin Interaktionen und TADs können genutzt werden, um gen-regulatorische Effekte von strukturellen Chromosomenaberration zu interpretieren, wie hier anhand von Patienten mit diversen klinischen Phänotypen gezeigt wird. Außerdem wurde eine Software entwickelt, um anhand von genetischen Sequenzeigenschaften und Gewebe-spezifischen Signalen von Protein-Bindestellen, genomweite Chromatin Interaktionen mit hoher Genauigkeit vorherzusagen.
+
+Diese Arbeit zeigt, dass TADs nicht nur strukturelle Einheiten von Chromosomen sind, sondern entscheidende funktionale Bausteine von Genomen sind, welche das regulatorische Umfeld von Genen definieren. Daher wird es zunehmend wichtig, die Faltung des Genoms zu berücksichtigen, sowohl in der genomischen Forschung, als auch in der klinischen Praxis.
 
 # Curriculum vitae {-}
 
